# GPT-model

./: README.md  dog_breed_pytorch.py  dog_breed_tensorflow.py  pyproject.toml
neural_net_learning/: LLaMa_3_intro_296721_e17ed6-214266-6717ff.ipynb  mnist_example_296721_8b8551-214266-79bbeb.ipynb  mnist_tf_296721_885318-214266-336327.ipynb
neural_net_learning/checkpoints/: mnist_checkpoint.pth
neural_net_learning/py_tensorflow/: pytensorflow.py
neural_net_learning/pytorch/: cnn.py  device.py  pytorch.py  pytorch_learn_model_func.py  use_learnt_model.py
